<resources>
    <string name="app_name">Modular Remote</string>
    <string name="app_launcher_name">ModMote</string>
    <string name="title_activity_main">Modular Remote</string>
    <string name="title_activity_shortcut">Select page</string>
    <string name="page_shortcut">Page shortcut</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_fragment">Add module</string>
    <string name="action_container_edit_mode_drag">Drag containers</string>
    <string name="action_container_edit_mode_scroll">Scroll containers</string>
    <string name="action_reconnect_receiver">Reconnect %1$s</string>
    <string name="action_reload_web_view">Reload site %1$s</string>
    <string name="action_edit_page_content">Edit modules</string>
    <string name="action_fragment_settings">Module settings</string>
    <string name="action_connection_manager">Connection manager</string>
    <string name="action_about">About</string>
    <string name="action_resize">Resize</string>
    <string name="action_edit">Edit</string>
    <string name="action_move">Move</string>
    <string name="action_clone">Clone</string>
    <string name="action_remove">Remove</string>
    <string name="receiver_type_pioneer">Pioneer</string>
    <string name="receiver_type_unspecified">Unspecified</string>
    <string name="receiver_type_pioneer_value" translatable="false">PIONEER</string>
    <string name="receiver_type_unspecified_value" translatable="false">UNSPECIFIED</string>
    <string-array name="receiver_type_array" translatable="false">
        <item>@string/receiver_type_unspecified</item>
        <item>@string/receiver_type_pioneer</item>
    </string-array>
    <string-array name="receiver_type_array_values" translatable="false">
        <item>@string/receiver_type_unspecified_value</item>
        <item>@string/receiver_type_pioneer_value</item>
    </string-array>
    <string name="page_name_default">Page 1</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_add_fragment">Add module</string>
    <string name="dialog_configure_fragment">Module settings</string>
    <string name="dialog_receiver_ip">TCP device IP:</string>
    <string name="dialog_receiver_ip_summary">e.g. 192.168.1.23</string>
    <string name="dialog_address">Address:</string>
    <string name="dialog_address_summary">Web address</string>
    <string name="dialog_add_page">Add page</string>
    <string name="dialog_name">Name:</string>
    <string name="dialog_name_summary">Will be shown as page tab</string>
    <string name="dialog_edit_page">Edit page</string>
    <string name="dialog_enable_java_script">Enable java script (vulnerable)</string>
    <string name="dialog_allow_external_links">Allow opening links to different hosts</string>
    <string name="dialog_hide">Hide:" "</string>
    <string name="dialog_hide_selected">Hide selected</string>
    <string name="dialog_detect_inputs">Detect inputs</string>
    <string name="dialog_detecting_inputs">Detecting inputs, click to cancel</string>
    <string name="dialog_detect_inputs_finish">Inputs successful detected!</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_label">Label:</string>
    <string name="dialog_label_summary">Text on the button</string>
    <string name="dialog_select_command">Select command</string>
    <string name="dialog_edit_command">carriage return is not required</string>
    <string name="dialog_enter_command">Enter command</string>
    <string name="dialog_enter_raw">Enter raw</string>
    <string name="dialog_enter_response">Enter response</string>
    <string name="dialog_enter_raw_subcommand">Enter raw subcommand</string>
    <string name="dialog_select_container">Select container</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_overwrite_receiver_type">Overwrite TCP device type</string>
    <string name="dialog_overwrite_receiver_type_message">A connection for this ip already exists with the TCP device type \'%1$s\'.\nDo you want to change it to \'%2$s\'?</string>
    <string name="dialog_use_hardware_volume">Use hardware volume</string>
    <string name="dialog_finish">Finish</string>
    <string name="dialog_select_fragment">Select module</string>
    <string name="dialog_command">Command:</string>
    <string name="dialog_click_command">Click command:</string>
    <string name="dialog_double_click_command">Double click command:</string>
    <string name="dialog_long_click_command">Long click command:</string>
    <string name="dialog_volume_up_command">Volume up command:</string>
    <string name="dialog_volume_down_command">Volume down command:</string>
    <string name="dialog_receiver_type">TCP device type:</string>
    <string name="dialog_information_type">Display information type:</string>
    <string name="dialog_title_enter_volume">Enter volume</string>
    <string name="dialog_summary_enter_volume_db">Enter volume in dB</string>
    <string name="dialog_select_connection">Select connection</string>
    <string name="dialog_edit_connection">Edit connection</string>
    <string name="dialog_submenu_customization">Submenu customization</string>
    <string name="dialog_hide_submenu_elements">Hide submenu items (useful for overcrowded dropdown lists)</string>
    <string name="dialog_select_submenu">Select submenu</string>
    <string name="dialog_configure_toggle_on_state">Toggle on:</string>
    <string name="dialog_configure_toggle_off_state">Toggle off:</string>
    <string name="dialog_configure_toggle_on_state_title">Toggle on</string>
    <string name="dialog_configure_toggle_off_state_title">Toggle off</string>
    <string name="dialog_configure">Configure</string>
    <string name="dialog_response">Response:</string>
    <string name="dialog_select_response">Select response that will trigger this state</string>
    <string name="dialog_toggle_default_state">State on start:</string>
    <string name="dialog_static_text">Text:</string>
    <string name="dialog_static_text_summary">Enter text</string>
    <string name="dialog_display_mode">Display mode:</string>
    <string name="dialog_horizontal_text_gravity">Text alignment:</string>
    <string name="dialog_clone">Clone</string>
    <string name="dialog_move">Move</string>
    <string name="dialog_remove_connection">Remove connection</string>
    <string name="dialog_remove_connection_message">Remove \'%1$s\'?\nIf you still have modules that use this connection, make sure to delete them or the connection will get recreated.</string>
    <string name="dialog_configure_action_bar_display">Configure action bar display</string>
    <string name="dialog_display_functionality">Display functionality:</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_sort_fragments">Sort modules (drag &amp; drop)</string>
    <string name="dialog_sort_pages">Sort pages (drag &amp; drop)</string>
    <string name="dialog_hint">Hint:</string>
    <string name="dialog_hint_summary">Text displayed when nothing entered</string>
    <string name="dialog_greeting">Welcome</string>
    <string name="dialog_greeting_message">This app is still in its beta state. This means:
        \n- The app is not fully tested yet (bug reports are welcome)
        \n- Preset commands and responses are probably incomplete\n
        \nYou can report bugs <a href="https://github.com/SpiritCroc/Modular-Remote/issues">here</a> or <a href="mailto:spiritcroc@gmail.com?subject=Modular Remote">email me</a>.\n
        \nThis app is open source and requires contributions to grow! If you want to help with development, you can view the code <a href="https://github.com/SpiritCroc/Modular-Remote">here</a>.\n
        \nCoding is not the only way to help: In order to natively support more TCP devices, command lists are required to include in this app. A guide to supporting new devices can be found <a href="https://github.com/SpiritCroc/Modular-Remote/blob/master/guide_supporting_new_devices.md">here</a>.
        \nAlso take a look at the <a href="https://github.com/SpiritCroc/Modular-Remote/blob/master/TODO.txt">to-do list</a> (there should also be a section called \'no coding required\').\n
        \nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="dialog_about_app_version">Version %1$s (%2$d)</string>
    <string name="dialog_about_app_debug_version">Debug version %1$s (%2$d)\n%3$s - %4$s</string>
    <string name="dialog_about_0">This app is published under the terms of the GNU General Public License, version 3.0.
        \nSource code:
        \nhttps://github.com/SpiritCroc/Modular-Remote\n
        \nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="dialog_about_1_title">\n<u>Used 3rd party components</u></string>
    <string name="dialog_about_1_body">\n"Material Design Icons" by Google (licensed under CC BY 4.0)
        \nSource: http://www.google.com/design/spec/resources/sticker-sheets-icons.html#sticker-sheets-icons-components\n
        \nThe Roboto typeface by Google (licensed under the Apache license)
        \nSource: AOSP\n
        \nDragSortListView by Carl Bauer (licensed under the Apache license)
        \nSource: https://github.com/bauerca/drag-sort-listview</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_overlapping_fragments_warning">Some modules are overlapping. This is likely to cause unwanted results.</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="dialog_change">Change</string>
    <string name="dialog_remove_container">Remove %1$s?</string>
    <string name="dialog_reconnect">Reconnect</string>
    <string name="dialog_setup_grid_size_title">Setup grid size</string>
    <string name="dialog_setup_grid_size_message">Your modules will be positioned and resized according to an underlying grid, which is created by dividing the screen into a specified amount of units that you can modify here. The higher the entered value, the preciser you can set up your remote. Further options can be found in the settings.</string>
    <string name="dialog_setup_grid_size_suggest">Suggested: %1$d</string>
    <string name="horizontal_text_gravity_center">Center</string>
    <string name="horizontal_text_gravity_left">Left</string>
    <string name="horizontal_text_gravity_right">Right</string>
    <string-array name="horizontal_text_gravities" translatable="false">
        <item>@string/horizontal_text_gravity_center</item>
        <item>@string/horizontal_text_gravity_left</item>
        <item>@string/horizontal_text_gravity_right</item>
    </string-array>
    <string name="fragment_web_view">WebView</string>
    <string name="fragment_scroll_container">Vertical container</string>
    <string name="fragment_page_container">Page</string>
    <string name="fragment_widget">Widget</string>
    <string name="fragment_horizontal_container">Horizontal container</string>
    <string name="fragment_button">Button</string>
    <string name="fragment_display">Display</string>
    <string name="fragment_spinner">Dropdown list</string>
    <string name="fragment_toggle">Toggle button</string>
    <string name="fragment_command_line">Command line</string>
    <string name="fragment_web_view_value" translatable="false">web_view_fragment</string>
</resources>