<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/DialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_name"
        style="@style/DialogTitleViewTheme"/>
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_name_summary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/edit_use_hardware_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/view_use_hardware_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_use_hardware_volume"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_receiver_ip"
            style="@style/DialogTitleViewTheme"/>
        <AutoCompleteTextView
            android:id="@+id/edit_receiver_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_receiver_ip_summary"
            android:completionThreshold="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_receiver_type"
            style="@style/DialogTitleViewTheme"/>
        <Spinner
            android:id="@+id/edit_receiver_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_volume_up_command"
            style="@style/DialogTitleViewTheme"/>
        <Button
            android:id="@+id/select_command_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_select_command"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_volume_down_command"
            style="@style/DialogTitleViewTheme"/>
        <Button
            android:id="@+id/select_command_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_select_command"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_display_functionality"
        style="@style/DialogTitleViewTheme"/>
    <Button
        android:id="@+id/configure_action_bar_display"
        android:text="@string/dialog_configure_action_bar_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--Button
        android:id="@+id/configure_toast_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /-->
</LinearLayout>