<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/DialogTheme">

    <Button
        android:id="@+id/button_reconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_reconnect"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_receiver_ip"
        style="@style/DialogTitleViewTheme"/>
    <EditText
        android:id="@+id/edit_receiver_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_receiver_ip_summary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_receiver_type"
        style="@style/DialogTitleViewTheme"/>
    <Spinner
        android:id="@+id/edit_receiver_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_submenu_customization"
        style="@style/DialogTitleViewTheme"/>
    <Button
        android:id="@+id/hide_submenu_elements_button"
        android:text="@string/dialog_hide_submenu_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/dynamic_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>