<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/DialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_display_mode"
        style="@style/DialogTitleViewTheme"/>
    <Spinner
        android:id="@+id/edit_display_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/edit_static_text_display_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_static_text"
            style="@style/DialogTitleViewTheme"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_static_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/dialog_static_text_summary"/>
            <Spinner
                android:id="@+id/add_static_text_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_clock_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/text_gravity_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_horizontal_text_gravity"
            style="@style/DialogTitleViewTheme"/>
        <Spinner
            android:id="@+id/horizontal_gravity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tcp_device_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_receiver_ip"
            style="@style/DialogTitleViewTheme"/>
        <AutoCompleteTextView
            android:id="@+id/edit_receiver_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_receiver_ip_summary"
            android:completionThreshold="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_receiver_type"
            style="@style/DialogTitleViewTheme"/>
        <Spinner
            android:id="@+id/edit_receiver_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/edit_tcp_display_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_information_type"
            style="@style/DialogTitleViewTheme"/>
        <Spinner
            android:id="@+id/edit_information_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_click_command"
            style="@style/DialogTitleViewTheme"/>
        <Button
            android:id="@+id/select_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_select_command"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_double_click_command"
            style="@style/DialogTitleViewTheme"/>
        <Button
            android:id="@+id/select_command_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_select_command"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_long_click_command"
            style="@style/DialogTitleViewTheme"/>
        <Button
            android:id="@+id/select_command_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_select_command"/>
    </LinearLayout>

</LinearLayout>
