<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/DialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_width"
        style="@style/DialogTitleViewTheme"/>
    <EditText
        android:id="@+id/edit_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:hint="@string/dialog_size_in_block_units"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_height"
        style="@style/DialogTitleViewTheme"/>
    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:hint="@string/dialog_size_in_block_units"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_receiver_ip"
        style="@style/DialogTitleViewTheme"/>
    <AutoCompleteTextView
        android:id="@+id/edit_receiver_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_receiver_ip_summary"
        android:completionThreshold="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_receiver_type"
        style="@style/DialogTitleViewTheme"/>
    <Spinner
        android:id="@+id/edit_receiver_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_configure_toggle_on_state"
        style="@style/DialogTitleViewTheme"/>
    <Button
        android:id="@+id/configure_on_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_configure"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_configure_toggle_off_state"
        style="@style/DialogTitleViewTheme"/>
    <Button
        android:id="@+id/configure_off_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_configure"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_toggle_default_state"
        style="@style/DialogTitleViewTheme"/>
    <Spinner
        android:id="@+id/default_state_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>